Fixed spacing with code snippets in Markdown files.

--- a/css/style.scss
+++ b/css/style.scss
@@ -742,7 +742,7 @@ ul {
 				box-sizing: content-box;
 
 				@media (min-width: $screen-sm-min) {
-					margin-left: -30px;
+					margin-left: -15px;
 					padding-right: 60px;
 				}
 
@@ -763,7 +763,7 @@ ul {
 					margin-top: 10px;
 
 					@media (min-width: $screen-sm-min) {
-						padding-left: 50px;
+						padding-left: 15px;
 						padding-right: 10px;
 						// margin-bottom: 40px;
 						font-size: 20px;
